--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="manifest" href="/manifest.json">
     <link rel="apple-touch-icon" href="https://cdn-icons-png.flaticon.com/512/2548/2548523.png">
 
-    <!-- Tailwind CDN for simple styling without build complexity -->
+    <!-- Tailwind CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -45,7 +45,7 @@
         margin: 0; 
       }
     </style>
-  <script type="importmap">
+<script type="importmap">
 {
   "imports": {
     "react": "https://esm.sh/react@^19.2.4",
@@ -53,9 +53,8 @@
     "react/": "https://esm.sh/react@^19.2.4/",
     "@heroicons/react/": "https://esm.sh/@heroicons/react@^2.2.0/",
     "recharts": "https://esm.sh/recharts@^3.7.0",
-    "path": "https://esm.sh/path@^0.12.7",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.4",
     "vite": "https://esm.sh/vite@^7.3.1",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.4",
     "fs": "https://esm.sh/fs@^0.0.1-security"
   }
 }
