--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     
     <!-- PWA Manifest -->
     <link rel="manifest" href="/manifest.json">
-    <link rel="apple-touch-icon" href="/icon.png">
+    <!-- Added ?v=2 to force browser to re-fetch the icon -->
+    <link rel="apple-touch-icon" href="/icon.png?v=2">
 
     <!-- Tailwind CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -48,14 +49,14 @@
 <script type="importmap">
 {
   "imports": {
-    "react/": "https://esm.sh/react@^19.2.4/",
     "react": "https://esm.sh/react@^19.2.4",
     "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
+    "react/": "https://esm.sh/react@^19.2.4/",
+    "@heroicons/react/": "https://esm.sh/@heroicons/react@^2.2.0/",
     "recharts": "https://esm.sh/recharts@^3.7.0",
     "vite": "https://esm.sh/vite@^7.3.1",
     "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.4",
-    "fs": "https://esm.sh/fs@^0.0.1-security",
-    "@heroicons/react/": "https://esm.sh/@heroicons/react@^2.2.0/"
+    "fs": "https://esm.sh/fs@^0.0.1-security"
   }
 }
 </script>
