refactor: Update PWA asset paths
Update manifest.json, index.html, and sw.js to use simple relative paths for PWA assets like manifest.json, icon.png, and sw.js. This ensures correct resolution and compatibility across different hosting environments.

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <title>Program Architect V1.1</title>
     
-    <!-- PWA Manifest: Changed to relative path -->
-    <link rel="manifest" href="./manifest.json" />
-    <!-- Icon: Changed to relative path, removed query param to avoid file resolution issues -->
-    <link rel="apple-touch-icon" href="./icon.png" />
+    <!-- PWA Manifest -->
+    <link rel="manifest" href="manifest.json" />
+    <!-- Icon: Use simple relative path -->
+    <link rel="apple-touch-icon" href="icon.png" />
 
     <!-- Tailwind CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -67,8 +67,7 @@
       // Register PWA Service Worker
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
-          // Changed to relative path
-          navigator.serviceWorker.register('./sw.js')
+          navigator.serviceWorker.register('sw.js')
             .then(registration => {
               console.log('SW registered: ', registration);
             })
@@ -78,7 +77,7 @@
         });
       }
     </script>
-    <!-- Entry Point for Vite Build -->
-    <script type="module" src="./index.tsx"></script>
+    <!-- Entry Point for Vite Build: Must be /index.tsx to resolve correctly -->
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
