--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
     <title>Program Architect V1.1</title>
     
     <!-- PWA Manifest -->
-    <link rel="manifest" href="manifest.json" />
-    <!-- Icon: Use simple relative path -->
-    <link rel="apple-touch-icon" href="icon.png" />
+    <link rel="manifest" href="/manifest.json">
+    <link rel="apple-touch-icon" href="/icon.png">
 
     <!-- Tailwind CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -49,14 +48,14 @@
 <script type="importmap">
 {
   "imports": {
+    "react/": "https://esm.sh/react@^19.2.4/",
     "react": "https://esm.sh/react@^19.2.4",
     "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
-    "react/": "https://esm.sh/react@^19.2.4/",
-    "@heroicons/react/": "https://esm.sh/@heroicons/react@^2.2.0/",
     "recharts": "https://esm.sh/recharts@^3.7.0",
     "vite": "https://esm.sh/vite@^7.3.1",
     "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.4",
-    "fs": "https://esm.sh/fs@^0.0.1-security"
+    "fs": "https://esm.sh/fs@^0.0.1-security",
+    "@heroicons/react/": "https://esm.sh/@heroicons/react@^2.2.0/"
   }
 }
 </script>
@@ -67,7 +66,7 @@
       // Register PWA Service Worker
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
-          navigator.serviceWorker.register('sw.js')
+          navigator.serviceWorker.register('/sw.js')
             .then(registration => {
               console.log('SW registered: ', registration);
             })
@@ -77,7 +76,7 @@
         });
       }
     </script>
-    <!-- Entry Point for Vite Build: Must be /index.tsx to resolve correctly -->
+    <!-- Entry Point for Vite Build -->
     <script type="module" src="/index.tsx"></script>
   </body>
 </html>
