--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <title>Program Architect V1.1</title>
     
-    <!-- PWA Manifest -->
-    <link rel="manifest" href="/manifest.json">
-    <link rel="apple-touch-icon" href="/icon.png">
+    <!-- PWA Manifest: Use relative path (no slash at start) -->
+    <link rel="manifest" href="manifest.json">
+    <link rel="apple-touch-icon" href="icon.png">
 
     <!-- Tailwind CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -66,7 +66,8 @@
       // Register PWA Service Worker
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
-          navigator.serviceWorker.register('/sw.js')
+          // Use relative path for SW
+          navigator.serviceWorker.register('sw.js')
             .then(registration => {
               console.log('SW registered: ', registration);
             })
@@ -76,7 +77,7 @@
         });
       }
     </script>
-    <!-- Entry Point for Vite Build -->
+    <!-- Entry Point for Vite Build: KEEP AS ABSOLUTE PATH to fix Blue Screen issue -->
     <script type="module" src="/index.tsx"></script>
   </body>
 </html>
