--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
     "vite": "https://esm.sh/vite@^7.3.1",
     "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.4",
     "fs": "https://esm.sh/fs@^0.0.1-security",
-    "@heroicons/react/": "https://esm.sh/@heroicons/react@^2.2.0/"
+    "@heroicons/react/": "https://esm.sh/@heroicons/react@^2.2.0/",
+    "path": "https://esm.sh/path@^0.12.7"
   }
 }
 </script>
