feat: Update PWA manifest and icons
Adds explicit icon definitions to `index.html` and updates the `manifest.json` with a new `id` and adjusted icon paths. This ensures proper PWA icon rendering across different platforms and browsers.

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <title>Program Architect V1.1</title>
     
-    <!-- PWA Manifest: Use relative path (no slash at start) -->
+    <!-- PWA Manifest -->
     <link rel="manifest" href="manifest.json">
+    <!-- Explicitly define icons for browser and iOS -->
+    <link rel="icon" type="image/png" href="icon.png">
     <link rel="apple-touch-icon" href="icon.png">
 
     <!-- Tailwind CDN -->
