--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <title>Program Architect V1.1</title>
     
-    <!-- PWA Manifest -->
-    <link rel="manifest" href="/manifest.json">
+    <!-- PWA Manifest: Added version query to force cache busting -->
+    <link rel="manifest" href="/manifest.json?v=2.0">
     <!-- Explicitly define icons for browser and iOS -->
     <link rel="icon" type="image/png" href="/icon.png">
     <link rel="apple-touch-icon" href="/icon.png">
@@ -72,22 +72,8 @@
           navigator.serviceWorker.register('/sw.js')
             .then(registration => {
               console.log('SW registered: ', registration);
-              
-              // Check for updates
-              registration.onupdatefound = () => {
-                const installingWorker = registration.installing;
-                installingWorker.onstatechange = () => {
-                  if (installingWorker.state === 'installed') {
-                    if (navigator.serviceWorker.controller) {
-                      console.log('New content is available; please refresh.');
-                      // Optional: Force reload to show new version
-                      // window.location.reload(); 
-                    } else {
-                      console.log('Content is cached for offline use.');
-                    }
-                  }
-                };
-              };
+              // Force update checking
+              registration.update();
             })
             .catch(registrationError => {
               console.log('SW registration failed: ', registrationError);
